bpo-34384: Fix os.readlink() on Windows

os.readlink() now accepts path-like objects on Windows.